--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ body{
   text-align: center;
 
 }
-
+h1{
+  display: block;
+  text-align: center;
+  margin-top: 100px;
+}
 a{
   display: block;
   text-align: center;
@@ -46,7 +50,7 @@ form {
   width: 900px;
   margin-left: 15%;
   margin-right: 25%;
-  margin-top: 10%;
+
 }
 p {
   text-align: center;
@@ -56,15 +60,16 @@ p {
 
 </head>
 <body>
+<h1>DormEats</h1>
 <div>
 <form name = "passdata" action="." method ="post">
     <table>
         <tr></tr><tr></tr>
         <tr>
-            <h2>Welcome to (change name)</h2>
+            <h2>Welcome!</h2>
             <br>
             </tr>
-        <center><p> Please enter the ingredients you would like to get a recepie for <input type="text" name ="userInput"></center></p>
+        <center><p> Please enter the ingredients you would like to get a recipe for separated by a space. <input type="text" name ="userInput"></center></p>
     </table>
 
 
