--- a/recipies.html
+++ b/recipies.html
@@ -5,17 +5,18 @@
     <title>Recipes</title>
     <style>
 html{
-  background:  darkslateblue;
+  background:  AliceBlue;
 }
 
 div{
   font-size: 15px;
+  font-family: Georgia;  
   border-radius: 25px;
   display:block;
   margin: 0px auto 0px;
   padding: 0px 50px 0px;
   width: 1000px;
-  background:  gray;
+  background:  AliceBlue;
 }
 
 img:hover {
@@ -26,7 +27,7 @@ table{
 }
 
 tbody tr:hover {
-  background-color: darkgray;
+  background-color: GhostWhite;
 }
     </style>
 </head>
