--- a/recipies.html
+++ b/recipies.html
@@ -10,7 +10,7 @@ html{
 
 div{
   font-size: 15px;
-  font-family: Georgia;  
+  font-family: Georgia;
   border-radius: 25px;
   display:block;
   margin: 0px auto 0px;
@@ -27,7 +27,7 @@ table{
 }
 
 tbody tr:hover {
-  background-color: GhostWhite;
+  background-color: White;
 }
     </style>
 </head>
