--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@ div{
     text-align: center;
 }
 form {
-  background: Seashell;
+
   display: inline-block;
   border-radius: 15px;
   padding: 15px;
   width: 900px;
   margin-left: 15%;
   margin-right: 25%;
+  background: rgba(255,245,238,0.9);
 }
 p {
   text-align: center;
