--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ h1{
   display: block;
   text-align: center;
   margin-top: 100px;
+  color: white;
 }
 a{
   display: block;
@@ -54,18 +55,13 @@ p {
 
 </head>
 <body>
-<h1>
-    <font color = white>DormEats</font></h1>
+<h1>DormEats</h1>
 <div>
 <form name = "passdata" action="." method ="post">
-    <table>
-        <tr></tr><tr></tr>
-        <tr>
-            <h2>Welcome!</h2>
-            <br>
-            </tr>
-        <center><p> Enter an ingredient to search for recipe: <input type="text" name ="userInput"></center></p>
-    </table>
+    <h2>Welcome!</h2>
+        <br>
+
+    <p> Enter an ingredient to search for recipe: <input title="Separate multiple ingredients using a space." type="text" name ="userInput"></p>
 
 </form>
 </div>
